samples/_failures_safe/1761391874_0ceb1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_494e6fa4.c: In function ‘main’:
./samples/SAFE/__tmp_494e6fa4.c:153:5: error: ‘generate’ undeclared (first use in this function)
  153 |     generate
      |     ^~~~~~~~
./samples/SAFE/__tmp_494e6fa4.c:153:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_494e6fa4.c:153:13: error: expected ‘;’ at end of input
  153 |     generate
      |             ^
      |             ;
./samples/SAFE/__tmp_494e6fa4.c:153:5: error: expected declaration or statement at end of input
  153 |     generate
      |     ^~~~~~~~
